Update to GSAP and scroll-top attributes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -842,7 +842,7 @@ li:nth-child(5) a:hover {
 }
 
 .contact-section {
-  background-color: #11100e;
+  background-color: #000;
   padding: 55px 0 55px 0;
 }
 
@@ -962,7 +962,7 @@ h3 {
 
 footer {
 /* margin: 100px 0 0 0; */
-background: #11100e;
+background: #000;
 padding: 60px 0 25px 0;
 text-align: center;
 }
