--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -552,78 +552,7 @@ font-size: 1.3rem;
   background-color: var(--first-color);
 }
 
-/*===== CONTACTME =====*/
-/* .contact__container {
-  row-gap: 2.5rem;
-}
-
-.contact__content {
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-}
-
-.contact__box {
-  background-color: #FFF;
-  border-radius: .5rem;
-  padding: 1.5rem;
-  text-align: center;
-  box-shadow: 0 4px 6px rgba(174, 190, 205, 0.3);
-}
-
-.contact__box:hover {
-  box-shadow: 0 6px 8px rgba(174, 190, 205, 0.4);
-}
-
-.contact__icon, .contact__title {
-  color: var(--first-color);
-}
-
-.contact__icon {
-  font-size: 2rem;
-}
-
-.contact__title {
-  font-size: var(--h3-font-size);
-  margin: var(--mb-1) 0;
-}
-
-.contact__social {
-  color: var(--first-color-light);
-  font-size: 1.25rem;
-  margin: 0 var(--mb-1);
-}
-
-.contact__inputs {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 1rem;
-}
-
-.contact__input, .contact__button {
-  outline: none;
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-}
-
-.contact__input {
-  width: 100%;
-  padding: 1rem;
-  border: 2px solid var(--first-color-light);
-  color: var(--first-color);
-  border-radius: .5rem;
-  margin-bottom: var(--mb-1);
-}
-
-.contact ::placeholder {
-  color: var(--first-color-light);
-  font-family: var(--body-font);
-  font-weight: var(--font-semi-bold);
-}
-
-.contact__button {
-  cursor: pointer;
-  border: none;
-} */
-
+/*===== CONTACT =====*/
 .cognito a {
  display: none;
  pointer-events: none;
@@ -635,17 +564,17 @@ font-size: 1.3rem;
 }
 
 .cognito .c-html * {
-    color: #000;
-    font-size: 28px;
-    margin: 3%;
+    color: var(--first-color);
+    font-size: 24px;
+    /* margin: 3%; */
     width: 100%;
-    opacity: 0;
+    /* opacity: 0; */
     animation: fadeIn 2s ease-in both;
   }
 
 .cognito .c-forms-form .c-forms-confirmation-message {
   margin: 50px 0 0 0;
-  color: #000;
+  color: var(--first-color);
 }
 
 .c-forms-form {
@@ -653,26 +582,6 @@ font-size: 1.3rem;
     line-height: 1.3em;
     position: relative;
     padding: 3%;
-}
-
-.contact-section {
-  background-color: #000;
-  padding: 55px 0 55px 0;
-}
-
-.contact-section .title h2 {
-  color: #FFF;
-}
-
-/* .contact-center {
-  padding: 13%;
-} */
-
-.contact-right h1,
-h3 {
-  margin: 2rem 0;
-  color: #fff;
-  text-align: center;
 }
 
 
