--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -566,6 +566,7 @@ font-size: 1.3rem;
 .cognito .c-html * {
     color: var(--first-color);
     font-size: 24px;
+    line-height: 26px;
     /* margin: 3%; */
     width: 100%;
     /* opacity: 0; */
@@ -573,7 +574,7 @@ font-size: 1.3rem;
   }
 
 .cognito .c-forms-form .c-forms-confirmation-message {
-  margin: 50px 0 0 0;
+  /* margin: 50px 0 0 0; */
   color: var(--first-color);
 }
 
